--- a/style.css
+++ b/style.css
@@ -69,7 +69,12 @@ h3::first-letter {
   cursor: pointer;
   color: var(--secondary-color);
 }
-
+/* Volume  */
+#volume {
+  display: none;
+  transform: rotate(-90deg);
+  background-color: var(--primary-color);
+}
 /* for rotating disc while music is playing */
 .rotator {
   flex-grow: 1;
